--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                 <div class="page__inner-wrap" style="text-align: justify; text-justify: inter-word;">
                     <h2 style="font-size: x-large;"><b>About Me</b></h2>
                     <section class="page__content" itemprop="text" style="font-size: 17.5px; margin-top: 1%;">
-                        <p>I am a graduate from <a href="https://www.uom.edu.pk/">University of Malakand</a> with a Degree (Bachelors) in Computer Science and Specialization in Artificial Intelligence. I like to apply my technical skills, accrued from my engineering studies, to conflate the spheres of technology and innovation. I am passionate about applying AI to new domains and developing products that have a meaningful impact on people's lives.</p>
+                        <p>I am a graduate from <a href="https://www.numl.edu.pk/">National University Of Modern Languages (NUML)</a> with a Degree (Bachelors) in Computer Science and Specialization in Artificial Intelligence. I like to apply my technical skills, accrued from my engineering studies, to conflate the spheres of technology and innovation. I am passionate about applying AI to new domains and developing products that have a meaningful impact on people's lives.</p>
                         <p>Whether it is academics or management, challenging real-life problem-solving always attracts me. In the quest for expanding my horizons, I have constantly aimed at pursuing diverse interests. I'm a team player and love to work in collaboration. I also believe in helping the community and like to be a leader.</p>
                         <!-- <p>When not coding, you will most often find me making EDM or supporting Manchester United. GGMU :)</p> -->
                     </section>
