--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
         <meta charset="utf-8">
         <meta http-equiv="content-type" content="text/html;charset=utf-8" />
         <meta property="og:locale" content="en-US">
-        <meta property="og:site_name" content="Abhinav's Webpage">
+        <meta property="og:site_name" content="Yaseen's Webpage">
         <meta property="og:title" content="Muhammad Yaseen">
         <meta property="og:description" content="Muhammad Yaseen">
-        <meta property="og:url" content="https://abhinav-bohra.github.io">
-        <link rel="canonical" href="https://abhinav-bohra.github.io">
+        <meta property="og:url" content="https://Yaseen-bohra.github.io">
+        <link rel="canonical" href="https://Yaseen-bohra.github.io">
         <link rel="icon" type="image/png" href="images/icon_transparent.png">
         <meta name="HandheldFriendly" content="True">
         <meta name="MobileOptimized" content="320">
@@ -33,7 +33,7 @@
         <div id="header"></div>
         <div id="main" role="main">
             <div id="sidebar"></div>
-            <article class="page" itemscope itemtype="http://abhinav-bohra.github.io" style="padding-right: 4%; padding-left: 2%;">
+            <article class="page" itemscope itemtype="http://Yaseen-bohra.github.io" style="padding-right: 4%; padding-left: 2%;">
                 <meta itemprop="headline" content="Muhammad Yaseen - About me">
                 <meta itemprop="description" content="Muhammad Yaseen - A graduate from Indian Institute of Technology, Kharagpur with a Dual Degree (Bachelors and Masters) in Computer Science and Engineering and a Micro Specialization in Artificial Intelligence.">
                 <div class="page__inner-wrap" style="text-align: justify; text-justify: inter-word;">
