--- a/experience.html
+++ b/experience.html
@@ -101,6 +101,12 @@
                                     <span class="tag">REST APIs</span>
                                     <span class="tag">OpenCV</span>
                                     <span class="tag">Pillow</span>
+                                    <span class="tag">Generative AI</span>
+                                    <span class="tag">Large Language Models</span>
+                                    <span class="tag">Natural Language Processing</span>
+                                    <span class="tag">Computer Vision</span>
+                                    <span class="tag">Docker</span>
+                                    <span class="tag">Git</span>
                                 </div>
                             </div>
                         </div>
