--- a/sidebar.html
+++ b/sidebar.html
@@ -1,6 +1,6 @@
 <div class="sidebar sticky" style="margin-right: 0%;">
 	<div itemscope itemtype="http://schema.org/Person">
-		<div class="author__avatar"> <img src="images/jprofile.png" class="author__avatar" alt="Abhinav Bohra" style="padding-top: 0%; padding-bottom: 0%;"></div>
+		<div class="author__avatar"> <img src="images/jprofile.webp" class="author__avatar" alt="Abhinav Bohra" style="padding-top: 0%; padding-bottom: 0%;"></div>
 		<div class="author__content"><br>
 			<h2 class="author__name"><b>Muhammad Yaseen</b></h2>
 			<p class="author__bio"  style="font-size: 15px;">AI Engineer & Computer Science Graduate</p>
